# faststrate

./: README.md  cookiecutter.json  copier.yml  pyproject.toml
hooks/: post_gen_project.py
template/: pyproject.toml.jinja  {% if with_rust_extensions %}CMakeLists.txt{% endif %}.jinja  {% if with_rust_extensions %}Cargo.toml{% endif %}.jinja
template/{% if with_rust_extensions %}src{% endif %}/: {% if with_rust_extensions %}lib.rs{% endif %}.jinja
{{ cookiecutter.__project_name_kebab_case }}/: CMakeLists.txt  Cargo.toml  pyproject.toml  {% if cookiecutter.with_rust_extensions == '1' %}Cargo.toml{% endif %}
{{ cookiecutter.__project_name_kebab_case }}/src_rust/: lib.rs
