[project]
name = "substrate"
version = "1.5.1"
requires-python = ">=3.10"
dependencies = [
    "commitizen>=4.3.0",
    "copier>=9.4.1",
    "fastapi>=0.115.6",
    "pybind11>=2.13.6",
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.6.1",
    "ruff>=0.9.3",
    "scikit-build-core>=0.10.7",
    "typer>=0.15.1",
]

[tool.commitizen]
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"
